# productivity--anki_differ

./: .coverage  .gitignore  CLAUDE.md  README.md  SIMILAR_CARDS_FEATURE.md  anki-export-android.txt  anki_diff.py  anki_diff_tool.py  app.py  fix.md  main.md  merge_exports.py  milestones--feature--cleanup.md  pyproject.toml  pytest.ini  quick_test.py  refactor--cleanup.md  run_tests.py  selection_page_debug.html  selective_merge.py  tab_test.html  test_data_generator.py  test_export.txt  test_file1.txt  test_file2.txt  test_full_flow.py  test_js_issue.html  test_live_server.py  test_tabs.html  test_ui.py  test_ui_comprehensive.py  view_differences.html
.claude/: settings.local.json
anki_diff_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backlog/: config.yml
backlog/tasks/: task-1 - Analyze-and-Extend-Card-Data-Structure.md  task-10 - Add-Similar-Cards-Tab-to-Navigation.md  task-11 - Update-Comparison-Data-JSON-Structure.md  task-12 - Add-Similarity-Results-to-Export-Generation.md  task-13 - Optimize-Performance-for-Large-Datasets.md  task-2 - Create-SimilarCardPair-Data-Structure.md  (+7 more)
descripitions/: MILESTONES.md  PROJECT_OBJECTIVE.md  TESTING_STRATEGY.md
src/: anki_diff.py  anki_diff_tool.py  merge_exports.py  web_app.py
templates/: debug_template.html  index.html  select.html  select.html.backup  select.html.backup3  select.html.backup4  select.html.bak2  select_api_debug.html  select_minimal.html  select_new.html  tab_fix.js
tests/: conftest.py  demo_tests.py  test_browser.py  test_debug.py  test_manual.py  test_template_simple.py  test_web_app.py
(+26 files in other folders)
